test/files/neg/xml-entitydecl.scala
object foo {
  val xml =
    <?xml version="1.0"?>
    <!DOCTYPE html [
      <!ENTITY html (head, body)>
    ]>
    <html>
    </html>
}
