test/files/neg/xml-entitydecl.check
xml-entitydecl.scala:4: error: in XML literal: '-' expected instead of 'D'
    <!DOCTYPE html [
      ^
xml-entitydecl.scala:4: error: in XML literal: '-' expected instead of 'O'
    <!DOCTYPE html [
       ^
xml-entitydecl.scala:9: error: input ended while parsing XML
}
 ^
three errors found
